--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bottega-code-school/js-builder.git"
+    "url": "https://github.com/TexasMadeKing/capstone-front"
   },
   "keywords": [
     "es6",
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/bottega-code-school/js-builder/issues"
   },
-  "homepage": "https://github.com/bottega-code-school/js-builder",
+  "homepage": "https://jdb-capstone-front.herokuapp.com",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.5.0",
     "ajv": "6.12.0",
